--- a/index.html
+++ b/index.html
@@ -3,19 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trafalgar</title>
-<link rel="stylesheet" href="./style.css">
+    <title>Trafalgar - Virtual Healthcare</title>
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <div class="logo-icon">T</div>
+                <h1>Trafalgar</h1>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#find-doctor">Find a doctor</a></li>
+                <li><a href="#apps">Apps</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#about">About us</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <!-- Hero Section -->
+        <section class="hero" id="home">
+            <div class="hero-content">
+                <h2>Virtual healthcare<br>for you</h2>
+                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+                <button class="btn-primary">Consult today</button>
+            </div>
+            <div class="hero-image">
+                <img src="./healthcare-illustration.png" alt="Healthcare Illustration" />
+            </div>
+        </section>
+
+        <!-- Testimonials Section -->
+        <section class="testimonials" id="testimonials">
+            <h2>What our customer are saying</h2>
+            <div class="testimonials-container">
+                <div class="testimonial-card">
+                    <div class="testimonial-profile">
+                        <img src="./customer-1.jpg" alt="Edward Newgate" class="profile-img">
+                        <div class="profile-info">
+                            <h3>Edward Newgate</h3>
+                            <p>Founder Circle</p>
+                        </div>
+                    </div>
+                    <p class="testimonial-text">"Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedious form, long calls, or administrative hassle) and securely."</p>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-profile">
+                        <img src="./customer-2.jpg" alt="Athan Williamson" class="profile-img">
+                        <div class="profile-info">
+                            <h3>Athan Williamson</h3>
+                            <p>Lead Mountain</p>
+                        </div>
+                    </div>
+                    <p class="testimonial-text">"The service is exceptional. From scheduling to consultation, everything is seamless and user-friendly. I highly recommend Trafalgar for anyone seeking quality healthcare."</p>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-profile">
+                        <img src="./customer-3.jpg" alt="Fannie Merritt" class="profile-img">
+                        <div class="profile-info">
+                            <h3>Fannie Merritt</h3>
+                            <p>Soulprint Co</p>
+                        </div>
+                    </div>
+                    <p class="testimonial-text">"Outstanding medical professionals and outstanding service. They listened to my concerns and provided excellent guidance. I felt truly cared for throughout my experience."</p>
+                </div>
+            </div>
+            <div class="testimonials-nav">
+                <button class="nav-btn prev-btn">←</button>
+                <div class="dots">
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <button class="nav-btn next-btn">→</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section footer-about">
+                <div class="footer-logo">
+                    <div class="footer-logo-icon">T</div>
+                    <span>Trafalgar</span>
+                </div>
+                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+                <p class="copyright">©trafalgar PVT LTD 2020. All rights reserved</p>
+            </div>
+
+            <div class="footer-section">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#find-doctor">Find a doctor</a></li>
+                    <li><a href="#apps">Apps</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Region</h3>
+                <ul>
+                    <li><a href="#">Indonesia</a></li>
+                    <li><a href="#">Singapore</a></li>
+                    <li><a href="#">Hongkong</a></li>
+                    <li><a href="#">Canada</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Help</h3>
+                <ul>
+                    <li><a href="#">Help center</a></li>
+                    <li><a href="#">Contact support</a></li>
+                    <li><a href="#">Instructions</a></li>
+                    <li><a href="#">How it works</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    
+ 
 
 
 
 
 
 </body>
-
+  
 </html>
