--- a/index.html
+++ b/index.html
@@ -1,21 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trafalgar</title>
-<link rel="stylesheet" href="./style.css">
-
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+    <header>
+        <div class="container navbar">
+            <div class="logo">
+                <img src="logo.svg" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Find a doctor</a></li>
+                    <li><a href="#">Apps</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container content">
+        <div class="text-box">
+            <h1 class="h111">Virtual healthcare for you</h1>
+            <p>Our platform allows you to connect with doctors and health professionals
+                instantly. 24/7 healthcare access, no matter where you are.</p>
+            <a href="#" class="hero-btn">Consult today</a>
+        </div>
+        <div class="img-box">
+            <img src="tepadagi.png" class="IMG-BOX">
+        </div>
+    </div>
+    <div class="our-services">
+        <div class="container">
+            <h2 class="our-services">Our Services</h2>
+
+                <p class="our-description">
+                    We provide you with the best choices. Adjust them to your health needs and ensure you undergo
+                    treatment with
+                    our highly qualified doctors. You can consult with us to determine which service is suitable for
+                    your
+                    health.
+                </p>
+        </div>
+        <div class="services-box">
+            <ul class="services-list">
+                <li>
+                    <img src="service1.png" alt="icon1">
+                    <h3>Online Pharmacy</h3>
+                    <p>Buy your medicines with our mobile application with a simple delivery system.</p>
+                </li>
+
+                <li>
+                    <img src="service2.svg" alt="icon2">
+                    <h3>Online pharmacy</h3>
+                    <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                </li>
+
+                <li>
+                    <img src="service3.png" alt="icon3">
+                    <h3>Consultation</h3>
+                    <p>Free consultation with our trusted doctors and get the best recomendations.</p>
+                </li>
 
 
+                <li>
+                    <img src="service4.svg" alt="icon4">
+                    <h3>Details info</h3>
+                    <p>Free consultation with our trusted doctors and get the best recomendations.</p>
+                </li>
+
+                <li>
+                    <img src="service5.png" alt="icon5">
+                    <h3>Emergency care</h3>
+                    <p>You can get 24/7 urgent care for yourself or your children and your lovely family.</p>
+                </li>
 
 
-
-
-</body>
-
-</html>
+                <li>
+                    <img src="service6.png" alt="icon6">
+                    <h3>Tracking</h3>
+                    <p>Track and save your medical history and health data.</p>
+                </li>
+            </ul>
+        </div>
