--- a/index.html
+++ b/index.html
@@ -9,133 +9,129 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <div class="logo-icon">T</div>
-                <h1>Trafalgar</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#find-doctor">Find a doctor</a></li>
-                <li><a href="#apps">Apps</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#about">About us</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Header & Navigation -->
+  <header>
+    <div class="navbar">
+      <div class="logo">
+        <div class="logo-icon">T</div>
+        <h1>Trafalgar</h1>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#find-doctor">Find a doctor</a></li>
+        <li><a href="#apps">Apps</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#about">About us</a></li>
+      </ul>
+    </div>
+  </header>
 
-    <main>
-        <!-- Hero Section -->
-        <section class="hero" id="home">
-            <div class="hero-content">
-                <h2>Virtual healthcare<br>for you</h2>
-                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
-                <button class="btn-primary">Consult today</button>
-            </div>
-            <div class="hero-image">
-                <img src="./healthcare-illustration.png" alt="Healthcare Illustration" />
-            </div>
-        </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Virtual healthcare for you</h2>
+      <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+      <button class="btn-consult">Consult today</button>
+    </div>
+    <div class="hero-image">
+      <svg viewBox="0 0 400 300" class="illustration">
+        <!-- Placeholder for hero illustration -->
+        <circle cx="200" cy="150" r="80" fill="#87CEEB" opacity="0.3"/>
+        <circle cx="150" cy="100" r="40" fill="#FFB6D9"/>
+      </svg>
+    </div>
+  </section>
 
-        <!-- Testimonials Section -->
-        <section class="testimonials" id="testimonials">
-            <h2>What our customer are saying</h2>
-            <div class="testimonials-container">
-                <div class="testimonial-card">
-                    <div class="testimonial-profile">
-                        <img src="./customer-1.jpg" alt="Edward Newgate" class="profile-img">
-                        <div class="profile-info">
-                            <h3>Edward Newgate</h3>
-                            <p>Founder Circle</p>
-                        </div>
-                    </div>
-                    <p class="testimonial-text">"Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedious form, long calls, or administrative hassle) and securely."</p>
-                </div>
+  <!-- Services Section -->
+  <section class="services" id="services">
+    <div class="services-container">
+      <div class="services-header">
+        <span class="services-tag">SERVICES</span>
+        <h2>Our services</h2>
+        <p>We provide to you the best choices for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+      </div>
 
-                <div class="testimonial-card">
-                    <div class="testimonial-profile">
-                        <img src="./customer-2.jpg" alt="Athan Williamson" class="profile-img">
-                        <div class="profile-info">
-                            <h3>Athan Williamson</h3>
-                            <p>Lead Mountain</p>
-                        </div>
-                    </div>
-                    <p class="testimonial-text">"The service is exceptional. From scheduling to consultation, everything is seamless and user-friendly. I highly recommend Trafalgar for anyone seeking quality healthcare."</p>
-                </div>
-
-                <div class="testimonial-card">
-                    <div class="testimonial-profile">
-                        <img src="./customer-3.jpg" alt="Fannie Merritt" class="profile-img">
-                        <div class="profile-info">
-                            <h3>Fannie Merritt</h3>
-                            <p>Soulprint Co</p>
-                        </div>
-                    </div>
-                    <p class="testimonial-text">"Outstanding medical professionals and outstanding service. They listened to my concerns and provided excellent guidance. I felt truly cared for throughout my experience."</p>
-                </div>
-            </div>
-            <div class="testimonials-nav">
-                <button class="nav-btn prev-btn">←</button>
-                <div class="dots">
-                    <span class="dot active"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                </div>
-                <button class="nav-btn next-btn">→</button>
-            </div>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-section footer-about">
-                <div class="footer-logo">
-                    <div class="footer-logo-icon">T</div>
-                    <span>Trafalgar</span>
-                </div>
-                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
-                <p class="copyright">©trafalgar PVT LTD 2020. All rights reserved</p>
-            </div>
-
-            <div class="footer-section">
-                <h3>Company</h3>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#find-doctor">Find a doctor</a></li>
-                    <li><a href="#apps">Apps</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-section">
-                <h3>Region</h3>
-                <ul>
-                    <li><a href="#">Indonesia</a></li>
-                    <li><a href="#">Singapore</a></li>
-                    <li><a href="#">Hongkong</a></li>
-                    <li><a href="#">Canada</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-section">
-                <h3>Help</h3>
-                <ul>
-                    <li><a href="#">Help center</a></li>
-                    <li><a href="#">Contact support</a></li>
-                    <li><a href="#">Instructions</a></li>
-                    <li><a href="#">How it works</a></li>
-                </ul>
-            </div>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <circle cx="32" cy="20" r="8" fill="none" stroke="#4DA6D6" stroke-width="2"/>
+              <path d="M 20 40 Q 32 50 44 40" fill="none" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Search doctor</h3>
+          <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
         </div>
-    </footer>
-    
- 
 
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <rect x="16" y="12" width="32" height="40" fill="none" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="20" y1="20" x2="44" y2="20" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="20" y1="28" x2="44" y2="28" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Online pharmacy</h3>
+          <p>Buy your medicines with our mobile application with a simple delivery system</p>
+        </div>
 
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <rect x="16" y="12" width="32" height="40" fill="none" stroke="#4DA6D6" stroke-width="2" rx="2"/>
+              <line x1="20" y1="20" x2="44" y2="20" stroke="#4DA6D6" stroke-width="2"/>
+              <circle cx="24" cy="30" r="3" fill="#4DA6D6"/>
+              <line x1="32" y1="28" x2="44" y2="28" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Consultation</h3>
+          <p>Free consultation with our trusted doctors and get the best recommendations</p>
+        </div>
 
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <rect x="16" y="16" width="32" height="32" fill="none" stroke="#4DA6D6" stroke-width="2" rx="2"/>
+              <line x1="20" y1="24" x2="44" y2="24" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="20" y1="32" x2="44" y2="32" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="20" y1="40" x2="44" y2="40" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Details info</h3>
+          <p>Free consultation with our trusted doctors and get the best recommendations</p>
+        </div>
 
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <rect x="20" y="16" width="24" height="32" fill="none" stroke="#4DA6D6" stroke-width="2" rx="2"/>
+              <line x1="24" y1="20" x2="40" y2="20" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="24" y1="28" x2="40" y2="28" stroke="#4DA6D6" stroke-width="2"/>
+              <line x1="24" y1="36" x2="40" y2="36" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Emergency care</h3>
+          <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <svg viewBox="0 0 64 64" width="48" height="48">
+              <rect x="16" y="12" width="32" height="40" fill="none" stroke="#4DA6D6" stroke-width="2" rx="2"/>
+              <line x1="20" y1="20" x2="44" y2="20" stroke="#4DA6D6" stroke-width="2"/>
+              <circle cx="32" cy="32" r="8" fill="none" stroke="#4DA6D6" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Tracking</h3>
+          <p>Track and save your medical history and health data</p>
+        </div>
+      </div>
+
+      <div class="services-footer">
+        <button class="btn-learn-more">Learn more</button>
+      </div>
+    </div>
+  </section>
 
 </body>
   
