HTML CSS update

--- a/index.html
+++ b/index.html
@@ -6,10 +6,54 @@
     <title>Trafalgar</title>
 <link rel="stylesheet" href="./style.css">
 
-</head>
 
+</head>
 <body>
-    
+  <section class="articles">
+    <h2 class="title">Check out our latest article</h2>
+    <span class="line"></span>
+
+    <div class="cards">
+        <div class="card">
+            <img src="./image 2 (1).png"">
+            <div class="card-body">
+                <h3>Disease detection, check up in the laboratory</h3>
+                <p>
+                    In this case, the role of the health laboratory is very important
+                    to do a disease detection.
+                </p>
+                <a href="#">Read more →</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./image 2.png"">
+            <div class="card-body">
+                <h3>Herbal medicines that are safe for consumption</h3>
+                <p>
+                    Herbal medicine is very widely used at this time
+                    because of its very good for your health.
+                </p>
+                <a href="#">Read more →</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="./image 3.png"">
+            <div class="card-body">
+                <h3>Natural care for healthy facial skin</h3>
+                <p>
+                    A healthy lifestyle should start from now
+                    and also for your skin health.
+                </p>
+                <a href="#">Read more →</a>
+            </div>
+        </div>
+    </div>
+
+    <button class="view-btn">View all</button>
+</section>
+
 
 
 
@@ -17,5 +61,4 @@
 
 
 </body>
-
 </html>
