--- a/index.html
+++ b/index.html
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trafalgar</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 <link rel="stylesheet" href="./style.css">
 
 </head>
-
 <body>
-    
+   <section class="hero">
+    <div class="hero-left">
+      <img src="git hub figma.png" alt="Healthcare illustration">
+    </div>
 
+    <div class="hero-right">
+      <h1>Leading healthcare<br>providers</h1>
+      <div class="line"></div>
+      <p>
+        Trafalgar provides progressive, and affordable healthcare,
+        accessible on mobile and online for everyone.
+        To us, it’s not just work. We take pride
+        in the solutions we deliver
+      </p>
+      <button>Learn more</button>
+    </div>
+  </section>
 
+<section class="download">
+  <div class="download-left">
+    <h1>Download our<br>mobile apps</h1>
+    <div class="line"></div>
+    <p>
+      Our dedicated patient engagement app and web portal allow you
+      to access information instantaneously (no tedious form, long calls,
+      or administrative hassle) and securely
+    </p>
+    <button class="btn">
+      Download <span>↓</span>
+    </button>
+  </div>
 
-
+  <div class="download-right">
+    <img src="git hub figma 2.png" alt="Mobile App Illustration">
+  </div>
+</section>
 
 
 </body>
-
 </html>
