--- a/index.html
+++ b/index.html
@@ -10,6 +10,77 @@
 
 <body>
     
+     <header class="hero">
+  <nav class="navbar">
+    <div class="logo">
+      <span>T</span> Trafalgar
+    </div>
+
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Find a doctor</a></li>
+      <li><a href="#">Apps</a></li>
+      <li><a href="#">Testimonials</a></li>
+      <li><a href="#">About us</a></li>
+    </ul>
+  </nav>
+
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>Virtual healthcare for you</h1>
+      <p>
+        Trafalgar provides progressive, and affordable healthcare,
+        accessible on mobile and online for everyone.
+      </p>
+      <button class="hero-btn">Consult today</button>
+    </div>
+
+    <div class="hero-image">
+      <img src="./trafalgar-header illustration 1 (1).png" alt="Healthcare illustration">
+    </div>
+  </div>
+</header>
+
+ <div class="cards">
+  <div class="card">
+    <img src="./Group.png" class="icon" alt="Search doctor">
+    <h3>Search doctor</h3>
+    <p>Choose your doctor from thousands of specialists.</p>
+  </div>
+
+  <div class="card">
+    <img src="./Group.png" class="icon" alt="Online pharmacy">
+    <h3>Online pharmacy</h3>
+    <p>Buy medicines online with a simple delivery system.</p>
+  </div>
+
+  <div class="card">
+    <img src="./Frame (1).png" class="icon" alt="Consultation">
+    <h3>Consultation</h3>
+    <p>Free consultation with our trusted doctors.</p>
+  </div>
+
+  <div class="card">
+    <img src="./Frame (1).svg" class="icon" alt="Details info">
+    <h3>Details info</h3>
+    <p>Get accurate medical information.</p>
+  </div>
+
+  <div class="card">
+    <img src="./Frame.png" class="icon" alt="Emergency care">
+    <h3>Emergency care</h3>
+    <p>24/7 emergency care for you and your family.</p>
+  </div>
+
+  <div class="card">
+    <img src="./Group (1).png" class="icon" alt="Tracking">
+    <h3>Tracking</h3>
+    <p>Track and save your medical history.</p>
+  </div>
+</div>
+
+<button class="btn">Learn more</button>
+
 
 
 
